Fix spacing of Hamburger Menu button

--- a/src/components/hamburger-menu/HamburgerMenu.scss
+++ b/src/components/hamburger-menu/HamburgerMenu.scss
@@ -18,7 +18,7 @@
   }
 
   .hambuger_menu_item {
-    margin: 2rem;
+    padding: 2rem 2rem 0;
     font-size: 1.5rem;
     text-transform: uppercase;
     text-decoration: none;
